# cpp-course

./: .gitignore  README.md
lab1/: CMakeLists.txt  cpp-lab1.pdf:Zone.Identifier
lab1/data/: test_ops.txt
lab1/src/: code_generator.cpp  func.cpp  test.cpp
